# world_of_blocks

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  Makefile  README.md
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
cmake/lib/: benchmark.cmake  fast_noise2.cmake  gtest.cmake  json.cmake  raygui.cmake  raylib-cpp.cmake  raylib.cmake  spdlog.cmake  threadpool.cmake
source/: debug_menu.cpp  debug_menu.hpp  game.cpp  game.hpp  lib.cpp  main.cpp  player.cpp  player.hpp
source/intro/: CMakeLists.txt  benlib_intro.c  benlib_intro.h  raylib_cpp_intro.c  raylib_cpp_intro.h  raylib_intro.c  raylib_intro.h
source/lib/: Block.hpp  CMakeLists.txt  Chunk.hpp  GameBase.cpp  GameBase.hpp  Generator.cpp  Generator.hpp  block.cpp  block.hpp  block_type.hpp  block_utils.hpp  chunk.hpp  debugMenu.cpp  debugMenu.hpp  debug_menu.cpp  debug_menu.hpp  gameContext.cpp  gameContext.hpp  gameElementHandler.hpp  game_base.hpp  game_class.hpp  game_context.cpp  game_context.hpp  generator.cpp  generator.hpp  generatorv1.hpp  generatorv2.hpp  logger_base.hpp  logger_decorator.hpp  math.hpp  optimizer.hpp  player.cpp  player.hpp  raygui_cpp.hpp  vector.hpp  world.cpp  world.hpp  world_model.cpp  world_model.hpp
source/lib/generator/: CMakeLists.txt
source/lib/logger/: CMakeLists.txt
source/lib/logger/logger/: logger_base.hpp  logger_facade.hpp
test/: CMakeLists.txt
test/source/: 2d_perlin_noise_exp.cpp  generator_bench.cpp  generator_test.cpp  noise_bench.cpp  world_of_blocks_bench.cpp  world_of_blocks_test.cpp
test/source/test/: generator_test.cpp
